[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tarp"
version = "1.0.1"
description = "ARP Request Module"
requires-python = ">=3.2"
license = {file = "LICENSE"}
readme = "README.md"
dependencies = [
    "scapy",
]

[tool.hatch.metadata]
allow-direct-references = true
